tests/fixtures/syntax/valid/stderr_empty_expectation.repor
case "stderr empty" {
  $ true
  assert {
    stderr empty
  }
}
