tests/fixtures/syntax/invalid/stderr_text_equals_fixture_reference.repor
case "stderr text_equals expected text requires a TextValue, not a fixture reference" {
  $ true
  assert {
    stderr text_equals @"expected.txt"
  }
}
